; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_nvidia_texture_shader.c_nvrc_resultarg.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_nvidia_texture_shader.c_nvrc_resultarg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { i32 }
%struct.wined3d_state = type { i32 }

@WINED3D_HIGHEST_TEXTURE_STATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Setting result arg for stage %u.\0A\00", align 1
@WINED3D_TSS_COLOR_OP = common dso_local global i32 0, align 4
@WINED3D_TSS_ALPHA_OP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_context*, %struct.wined3d_state*, i32)* @nvrc_resultarg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvrc_resultarg(%struct.wined3d_context* %0, %struct.wined3d_state* %1, i32 %2) #0 {
  %4 = alloca %struct.wined3d_context*, align 8
  %5 = alloca %struct.wined3d_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.wined3d_context* %0, %struct.wined3d_context** %4, align 8
  store %struct.wined3d_state* %1, %struct.wined3d_state** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @STATE_TEXTURESTAGE(i32 0, i32 0)
  %10 = sub nsw i32 %8, %9
  %11 = load i32, i32* @WINED3D_HIGHEST_TEXTURE_STATE, align 4
  %12 = add nsw i32 %11, 1
  %13 = sdiv i32 %10, %12
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @WINED3D_TSS_COLOR_OP, align 4
  %19 = call i32 @STATE_TEXTURESTAGE(i32 %17, i32 %18)
  %20 = call i32 @isStateDirty(%struct.wined3d_context* %16, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %29, label %22

22:                                               ; preds = %3
  %23 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %24 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @WINED3D_TSS_COLOR_OP, align 4
  %27 = call i32 @STATE_TEXTURESTAGE(i32 %25, i32 %26)
  %28 = call i32 @context_apply_state(%struct.wined3d_context* %23, %struct.wined3d_state* %24, i32 %27)
  br label %29

29:                                               ; preds = %22, %3
  %30 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* @WINED3D_TSS_ALPHA_OP, align 4
  %33 = call i32 @STATE_TEXTURESTAGE(i32 %31, i32 %32)
  %34 = call i32 @isStateDirty(%struct.wined3d_context* %30, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %43, label %36

36:                                               ; preds = %29
  %37 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %38 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* @WINED3D_TSS_ALPHA_OP, align 4
  %41 = call i32 @STATE_TEXTURESTAGE(i32 %39, i32 %40)
  %42 = call i32 @context_apply_state(%struct.wined3d_context* %37, %struct.wined3d_state* %38, i32 %41)
  br label %43

43:                                               ; preds = %36, %29
  ret void
}

declare dso_local i32 @STATE_TEXTURESTAGE(i32, i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @isStateDirty(%struct.wined3d_context*, i32) #1

declare dso_local i32 @context_apply_state(%struct.wined3d_context*, %struct.wined3d_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
